# opa-util

./: .pre-commit-config.yaml  Cargo.toml
core/: Cargo.toml
core/src/: data.rs  lib.rs  models.rs
core/src/endpoints/: compile.rs  data.rs  query.rs
opa-util/: Cargo.toml
opa-util/src/: lib.rs
proc-macros/core/src/: lib.rs
