[package]
name = "opa-util"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
session-util.workspace = true
core = { path = "../core", package = "opa-util-core", default-features = false }
proc-macros = { path = "../proc-macros", package = "opa-util-proc-macros" }

[features]
default = ["anyhow"]
anyhow = ["core/anyhow"]
color-eyre = ["core/color-eyre"]
db = ["core/db"]
db-filter = ["core/db-filter"]
mongodb-tx-cache-backend = ["core/mongodb-tx-cache-backend"]
tracing = ["core/tracing"]
tracing-args = ["core/tracing-args"]
tracing-full = ["core/tracing-full"]
tracing-ret = ["core/tracing-ret"]
